# XOHW21-144

./: README.md
HLS/: config_unroll_1.h  host.cpp  host.hpp  main.cpp  top.cpp
HLS/HardwareLibrary/: converters.h  dma.h  profiler.h  qnn-library.h
HLS/HardwareLibrary/1d/: conv1d.h  fc1d.h  pool1d.h
HLS/sample_dataset/input/: neg_02.ecg  neg_03.ecg  neg_04.ecg  neg_05.ecg  neg_09.ecg  neg_10.ecg  neg_12.ecg  neg_14.ecg  pos_02.ecg  pos_04.ecg  pos_06.ecg  pos_10.ecg
HW/: 10MHz.bit  10MHz.hwh  10MHz.tcl  con_fpga.py
SW/: CMakeLists.txt  build_run_sw.sh
SW/CMake_includes/: compiler_options.cmake  compiler_options.cmake~
SW/include/: HardwareDriver.hpp  HardwareDriver_impl.hpp  config.hpp  dev.hpp  host.hpp
SW/include_hls/: floating_point_v6_1_bitacc_cmodel.h  floating_point_v6_2_bitacc_cmodel.h  floating_point_v7_0_bitacc_cmodel.h  hls_math.h  mpfr.h  xilinx_hls_lib_2015_3.tgz
SW/include_hls/etc/: ap_fixed_sim.h  ap_int_sim.h
SW/include_hls/hls/: hls_axi_io.h  hls_cordic.h  hls_cordic_tables.h  hls_hotbm_tables.h  hls_log.h  hls_log_tables.h  hls_video_arithm.h  hls_video_harris.h  hls_video_imgproc.h  hls_video_io.h
SW/include_hls/hls/linear_algebra/: hls_svd.h
SW/include_hls/hls/utils/: x_hls_defines.h  x_hls_traits.h  x_hls_utils.h
SW/sample_dataset/input/: neg_01.ecg  neg_06.ecg  neg_07.ecg  neg_08.ecg  neg_11.ecg  neg_13.ecg  neg_15.ecg  pos_01.ecg  pos_03.ecg  pos_05.ecg  pos_07.ecg  pos_08.ecg  pos_09.ecg  pos_11.ecg  pos_12.ecg  pos_13.ecg  pos_14.ecg  pos_15.ecg
SW/src/: dev.cpp  host.cpp  main.cpp
